clusters/production/services/vaultwarden/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: vaultwarden
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`vault.${DOMAIN_INTERNAL}`)
      services:
        - kind: Service
          name: vaultwarden
          namespace: vaultwarden
          port: 80
      middlewares:
        - name: auth
          namespace: traefik
        - name: security
          namespace: traefik
        - name: optimizations
          namespace: traefik
        - name: error-pages
          namespace: traefik-errors
  tls:
    secretName: vault.${DOMAIN_INTERNAL}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-websocket
  namespace: vaultwarden
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`vault.${DOMAIN_INTERNAL}`) && Path(`/notifications/hub`)
      services:
        - kind: Service
          name: vaultwarden
          namespace: vaultwarden
          port: 3012
      middlewares:
        - name: auth
          namespace: traefik
        - name: security
          namespace: traefik
        - name: error-pages
          namespace: traefik-errors
  tls:
    secretName: vault.${DOMAIN_INTERNAL}
